pkgconfig on macos

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -234,6 +234,7 @@ jobs:
                   libxml2 \
                   ncurses \
                   openssl \
+                  pkgconfig \
                   sphinx-doc
           sudo pip3 install lxml --break-system-packages
 
