tls: refactor client fingerprinting (JA3/JA4)
Introduce a dedicated module for TLS client fingerprinting used by
the client SSL path. Parse the raw Client Hello once and compute
JA3 and JA4 (including ja4_r, ja4_o, ja4_ro) from that blob.

- New cache_tls_fingerprint.c / .h: parse Client Hello, compute
  JA3 and JA4 hashed/raw forms with readable layout constants and
  helpers (vbe16dec, set_raw_ext_payload, ja4_build_part_a, etc.).
- cache_client_ssl.c: call into the fingerprint module instead of
  inlining fingerprint logic; large reduction in client SSL file size.
- cache_tls.h: declare fingerprint API for the TLS layer.
- Makefile.am: add cache_tls_fingerprint.c to varnishd build.

--- a/bin/varnishd/Makefile.am
+++ b/bin/varnishd/Makefile.am
@@ -87,6 +87,7 @@ varnishd_SOURCES = \
 	tls/cache_tls.c \
 	tls/cache_backend_ssl.c \
 	tls/cache_client_ssl.c \
+	tls/cache_tls_fingerprint.c \
 	mgt/mgt_child.c \
 	mgt/mgt_tls_conf.c \
 	mgt/vtls_cfg/vtls_cfg_lexer.l \
@@ -170,6 +171,7 @@ noinst_HEADERS = \
 	http2/cache_http2.h \
 	tls/cache_tls.h \
 	tls/cache_client_ssl.h \
+	tls/cache_tls_fingerprint.h \
 	cache/cache_conn_pool_ssl.h \
 	mgt/mgt.h \
 	mgt/mgt_tls_conf.h \
